force-app/main/default/objects/Schedule__c/fields/Bus_Route__c.field-meta.xml
<CustomField>
    <fullName>Bus_Route__c</fullName>
    <label>Bus Route</label>
    <referenceTo>Bus_Route__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>