force-app/main/default/objects/Schedule__c/fields/Bus_Stop__c.field-meta.xml
<CustomField>
    <fullName>Bus_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Stop</label>
    <referenceTo>Bus_Stop__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>