force-app/main/default/objects/Schedule__c/fields/Time_To_Next_Stop__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Next_Stop__c</fullName>
    <description>Time in minutes to the next stop in a route.</description>
    <label>Time To Next Stop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>